Add ament_cargo entry_point and tasks

--- a/setup.cfg
+++ b/setup.cfg
@@ -71,11 +71,13 @@ colcon_core.prefix_path =
     ament = colcon_ros.prefix_path.ament:AmentPrefixPath
     catkin = colcon_ros.prefix_path.catkin:CmakePrefixPath
 colcon_core.task.build =
+    ros.ament_cargo = colcon_ros.task.ament_cargo.build:AmentCmakeBuildTask
     ros.ament_cmake = colcon_ros.task.ament_cmake.build:AmentCmakeBuildTask
     ros.ament_python = colcon_ros.task.ament_python.build:AmentPythonBuildTask
     ros.catkin = colcon_ros.task.catkin.build:CatkinBuildTask
     ros.cmake = colcon_ros.task.cmake.build:CmakeBuildTask
 colcon_core.task.test =
+    ros.ament_cargo = colcon_ros.task.ament_cargo.test:AmentCmakeTestTask
     ros.ament_cmake = colcon_ros.task.ament_cmake.test:AmentCmakeTestTask
     ros.ament_python = colcon_ros.task.ament_python.test:AmentPythonTestTask
     ros.catkin = colcon_ros.task.catkin.test:CatkinTestTask
